修正表格bug: 1,表格搜索框无法显示 2,表格搜索框css名称错误

--- a/app/views/irm/external_system_members/index.html.erb
+++ b/app/views/irm/external_system_members/index.html.erb
@@ -40,7 +40,7 @@
           <%= link_to(t(:cancel),{}, :href =>"javascript:void(0);", :onclick=>"display_member_grid()",:class=>"btn")%>
         <% end %>
       </td>
-      <td class="page-block-helper">
+      <td class="page-block-help">
         <div id="selectablePeopleSearchBox"></div>
       </td>
     </tr>
@@ -67,7 +67,7 @@
             <%= link_submit t(:delete_selected), :confirm => t(:label_are_you_sure),:class=>"btn"%>
         <% end %>
       </td>
-      <td class="page-block-helper">
+      <td class="page-block-help">
         <div id="external_peopleSearchBox"></div>
       </td>
     </tr>
