--- a/app/views/irm/external_systems/index.html.erb
+++ b/app/views/irm/external_systems/index.html.erb
@@ -10,7 +10,7 @@
       <td class="page-block-button">
         <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
       </td>
-      <td class="page-block-helper">
+      <td class="page-block-help">
         <div id="external_systemsSearchBox"></div>
       </td>
     </tr>
