--- a/app/views/irm/external_systems/show.html.erb
+++ b/app/views/irm/external_systems/show.html.erb
@@ -61,7 +61,7 @@
          <%= link_to(t(:cancel),{}, :href =>"javascript:void(0);", :onclick=>"display_member_grid()",:class=>"btn")%>
       <% end %>
     </td>
-    <td class="page-block-helper">
+    <td class="page-block-help">
       <div id="selectablePeopleSearchBox"></div>
     </td>
   </tr></table>
@@ -85,7 +85,7 @@
           <%= link_submit t(:delete_selected), :confirm => t(:label_are_you_sure),:class=>"btn"%>
       <% end %>
     </td>
-    <td class="page-block-helper">
+    <td class="page-block-help">
       <div id="external_peopleSearchBox"></div>
     </td>
   </tr></table>
