--- a/app/views/irm/group_members/_new_form.html.erb
+++ b/app/views/irm/group_members/_new_form.html.erb
@@ -13,7 +13,7 @@
         <%= link_to(t(:back),{:controller =>"irm/groups",:action=>"show",:id=>@group.id},:class=>"btn")%>
       <% end %>
     </td>
-    <td class="page-block-helper">
+    <td class="page-block-help">
       <div id="selectablePersonSearchBox"></div>
     </td>
   </tr></table>
