--- a/app/views/irm/groups/show.html.erb
+++ b/app/views/irm/groups/show.html.erb
@@ -61,7 +61,7 @@
     <td class="page-block-button">
       <%= link_to t(:label_irm_group_add_person), {:controller=>"irm/group_members",:action => "new",:id=>@group.id},:class=>"btn" %>
     </td>
-    <td class="page-block-helper">
+    <td class="page-block-help">
       <div id="permissionsSearchBox"></div>
     </td>
   </tr></table>
