--- a/app/views/irm/people/_edit_form.html.erb
+++ b/app/views/irm/people/_edit_form.html.erb
@@ -124,7 +124,7 @@
           <td class="page-block-button">
             <%= content_for :form_buttons   %>
           </td>
-          <td class="page-block-helper">
+          <td class="page-block-help">
             <%= t(:step_n_total_m, :n => "1", :m => "3") %>
           </td>
         <% else %>
