--- a/app/views/irm/roles/show.html.erb
+++ b/app/views/irm/roles/show.html.erb
@@ -59,7 +59,7 @@
     <td class="page-block-button">
       <%= link_to t(:label_irm_role_edit_assignment), {:action => "edit_assignment", :id => @role.id},:class=>"btn"%>
     </td>
-    <td class="page-block-helper">
+    <td class="page-block-help">
       <div id="permissionsSearchBox"></div>
     </td>
   </tr></table>
