--- a/app/views/icm/incident_statuses/index.html.erb
+++ b/app/views/icm/incident_statuses/index.html.erb
@@ -73,7 +73,7 @@
       <td class="page-block-button">
         <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
       </td>
-      <td class="page-block-helper">
+      <td class="page-block-help">
         <div id="incidentStatusesSearchBox"></div>
       </td>
     </tr>
