--- a/app/views/irm/people/index.html.erb
+++ b/app/views/irm/people/index.html.erb
@@ -9,7 +9,7 @@
     <td class="page-block-button">
       <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
     </td>
-    <td class="page-block-helper">
+    <td class="page-block-help">
       <div id="searchBox"></div>
     </td>
   </tr></table>
