--- a/app/views/irm/applications/index.html.erb
+++ b/app/views/irm/applications/index.html.erb
@@ -1,36 +1,24 @@
 <%= common_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_application_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="applicationsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="applications" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("applications",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       { :key => "code", :label => t(:label_irm_tab_code),:searchable=>true },
-                       { :key => "name", :label => t(:label_irm_tab_name),:searchable=>true },
-                       { :key => "description", :label => t(:label_irm_tab_description),:searchable=>true }
-                      ],{:paginator_box=>"applicationsPaginatorBox",:search_box=>"applicationsSearchBox"})%>
-        <div id="applicationsPaginatorBox"></div>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_application_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="lookup_type"></div>
+      <%= datatable("lookup_type",{:controller=>"irm/applications",:action=>"get_data",:format=>"json"},
+                [],
+                 {:search_box=>"searchBox",:paginator_box=>"paginator"})%>
+      <div id="paginator"></div>
+  </div>
 </div>
 
 
