--- a/app/views/chm/change_impacts/_new_form.html.erb
+++ b/app/views/chm/change_impacts/_new_form.html.erb
@@ -1,61 +1,76 @@
-<%= form_for(@change_impact,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-    <%= page_block("newImpact") do |pb|%>
-        <%= pb.page_block_header(:title=>t(:label_chm_change_urgency_new)) do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-          <td class="pbHelp">
-          </td>
+<%= common_title %>
+<%= form_for(@change_impact,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col"><label for="code"><%=t(:code)%></label></td>
+          <td class="data-col"><%=f.text_field :code, :required=>true ,:id=>"code",:irm_uppercase=>true%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="name"><%=t(:name)%></label></td>
+          <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="display_sequence"><%=t(:display_sequence)%></label></td>
+          <td class="data-col"><%=f.text_field :display_sequence, :required=>true,:size=>5 %></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="default_flag"><%=t(:default_flag)%></label></td>
+          <td class="data-col"><%=f.check_box :default_flag%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="description"><%=t(:description)%></label></td>
+          <td class="data-col" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description",:class=>"input-xlarge" %></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
 
-        <% end %>
-       <%= pb.page_block_body do %>
-            <%= error_for @change_impact%>
-            <%= sub_page_block("baseInfo") do |spb|%>
-                <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
-                <%= spb.sub_page_block_body do %>
-                    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                      <tbody>
-                        <tr>
-                          <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
-                          <td class="dataCol"><%=f.text_field :code, :required=>true ,:id=>"code",:irm_uppercase=>true%></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                          <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="display_sequence"><%=t(:display_sequence)%></label></td>
-                          <td class="dataCol"><%=f.text_field :display_sequence, :required=>true,:size=>5 %></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="default_flag"><%=t(:default_flag)%></label></td>
-                          <td class="dataCol"><%=f.check_box :default_flag%></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description"%></td>
-                        </tr>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
 
-                      </tbody>
-                    </table>
-                <% end %>
-          <% end %>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_chm_change_impact_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
         </div>
-        <%= pb.page_block_footer do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        <% end %>
-    <% end %>
-    <% end %>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
 <% end %>
