修正多语言编辑页面

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1261,7 +1261,7 @@ table.form-table td.data-4col{
   position: relative;
 }
 
-table.form-table .form-field-required .form-field-required-flag {
+.form-field-required .form-field-required-flag {
     background-color: #CC0000;
     bottom: 1px;
     left: -4px;
