--- a/app/views/chm/change_task_templates/_tasks.html.erb
+++ b/app/views/chm/change_task_templates/_tasks.html.erb
@@ -1,28 +1,16 @@
 <%= detail_data_table(datas.length) do %>
   <!--  irm datatable      -->
-  <div class="irm-datatable">
+  <div class="datatable">
     <div>
         <table>
           <thead>
             <tr>
-              <th style="width:80px;">
-                <div><%= t(:operation) %></div>
-              </th>
-              <th>
-                <div><%= t(:label_chm_change_task_name) %></div>
-              </th>
-              <th>
-                <div><%= t(:label_chm_change_task_support_group) %></div>
-              </th>
-              <th>
-                <div><%= t(:label_chm_change_task_support_person) %></div>
-              </th>
-              <th>
-                <div><%= t(:label_chm_change_task_status) %></div>
-              </th>
-              <th>
-                <div><%= t(:label_chm_change_task_description) %></div>
-              </th>
+              <th style="width:80px;"><div><%= t(:operation) %></div></th>
+              <th><div><%= t(:label_chm_change_task_name) %></div></th>
+              <th><div><%= t(:label_chm_change_task_support_group) %></div></th>
+              <th><div><%= t(:label_chm_change_task_support_person) %></div></th>
+              <th><div><%= t(:label_chm_change_task_status) %></div></th>
+              <th><div><%= t(:label_chm_change_task_description) %></div></th>
             </tr>
           </thead>
           <tbody>
@@ -33,25 +21,11 @@
                     <%= link_to(t(:new),{:controller => "chm/change_template_tasks", :action => "new",:source_id=>@change_task_template.id,:phase_id=>phase.id},:back=>true) %>
                   </div>
                 </td>
-                <td>
-                  <div><b><%= t(:label_chm_change_task_change_task_phase) %>:<%= phase[:name] %></b></div>
-                </td>
-                <td>
-                  <div>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                  </div>
-                </td>
-                <td>
-                  <div>
-                  </div>
-                </td>
+                <td><div><b><%= t(:label_chm_change_task_change_task_phase) %>:<%= phase[:name] %></b></div></td>
+                <td><div></div></td>
+                <td><div></div></td>
+                <td><div></div></td>
+                <td><div></div></td>
               </tr>
               <% datas[1][phase.id].each do |data| %>
                 <tr id="<%=data[:id]%>">
