--- a/app/views/chm/change_template_tasks/_edit_form.html.erb
+++ b/app/views/chm/change_template_tasks/_edit_form.html.erb
@@ -1,75 +1,91 @@
-<%= form_for(@change_task,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-    <%= page_block("newImpact") do |pb|%>
-        <%= pb.page_block_header(:title=>t(:label_chm_change_task_edit)) do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
+<%= common_title %>
+<%= form_for(@change_task,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col"><label for="name"><%=t(:name)%></label></td>
+          <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="description"><%=t(:description)%></label></td>
+          <td class="data-col" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description",:class=>"input-xlarge"%></td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="support_group_id"><%=t(:label_chm_change_task_support_group)%></label></td>
+          <td class="data-col">
+            <%=f.blank_select :support_group_id,available_support_group,{},{:id=>"support_group_id"}%>
           </td>
-          <td class="pbHelp">
-          </td>
+          <td class="label-col"><label for="support_person_id"><%=t(:label_chm_change_task_support_person)%></label></td>
+          <td class="data-col"><%= f.blank_select(:support_person_id,[],{},
+                              {
+                               :id=>"support_person_id",
+                               :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${support_group_id}"),
+                               :depend=>"support_group_id",
+                               :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
+                               }) %></td>
 
-        <% end %>
-       <%= pb.page_block_body do %>
-            <%= error_for @change_task%>
-            <%= sub_page_block("baseInfo") do |spb|%>
-                <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
-                <%= spb.sub_page_block_body do %>
-                    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                      <tbody>
-                        <tr>
-                          <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                          <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"name"%></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"description"%></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="support_group_id"><%=t(:label_chm_change_task_support_group)%></label></td>
-                          <td class="dataCol">
-                            <%=f.blank_select :support_group_id,available_support_group,{},{:id=>"support_group_id"}%>
-                          </td>
-                          <td class="labelCol"><label for="support_person_id"><%=t(:label_chm_change_task_support_person)%></label></td>
-                          <td class="dataCol"><%= f.blank_select(:support_person_id,[],{},
-                                              {
-                                               :id=>"support_person_id",
-                                               :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${support_group_id}"),
-                                               :depend=>"support_group_id",
-                                               :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                               }) %></td>
+        </tr>
+        <tr>
+          <td class="label-col empty"><label for="status_code"><%=(t :label_chm_change_task_change_task_phase)%></label></td>
+          <td class="data-col"><%=f.blank_select :change_task_phase_id, options_for(Chm::ChangeTaskPhase)%></td>
+          <td class="label-col"></td>
+          <td class="data-col"></td>
+        </tr>
+        <tr>
+          <td class="label-col empty"><label for="status_code"><%=(t :label_chm_change_task_status)%></label></td>
+          <td class="data-col"><%=f.select :status, options_for(Chm::ChangeStatus)%></td>
+          <td class="label-col"></td>
+          <td class="data-col"></td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="description"><%=t(:label_chm_change_task_message)%></label></td>
+          <td class="data-col" colspan="3" width="82%"><%=f.text_area :message, :cols=>60,:rows=>3,:id=>"description",:class=>"input-xlarge"%></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
 
-                        </tr>
-                        <tr>
-                          <td class="labelCol empty"><label for="status_code"><%=(t :label_chm_change_task_change_task_phase)%></label></td>
-                          <td class="dataCol"><%=f.blank_select :change_task_phase_id, options_for(Chm::ChangeTaskPhase)%></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol empty"><label for="status_code"><%=(t :label_chm_change_task_status)%></label></td>
-                          <td class="dataCol"><%=f.select :status, options_for(Chm::ChangeStatus)%></td>
-                          <td class="labelCol"></td>
-                          <td class="dataCol"></td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="description"><%=t(:label_chm_change_task_message)%></label></td>
-                          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :message, :cols=>60,:rows=>3,:id=>"description"%></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                <% end %>
-          <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_chm_change_task_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
         </div>
-        <%= pb.page_block_footer do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        <% end %>
-    <% end %>
-    <% end %>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
 <% end %>
 <script type="text/javascript">
   $(function(){
