--- a/modules/com/app/views/com/config_relation_types/index.html.erb
+++ b/modules/com/app/views/com/config_relation_types/index.html.erb
@@ -1,36 +1,24 @@
 <%= page_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_relation_type_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="config_relation_typesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="config_relation_types" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%= datatable("config_relation_types",{:action=>"get_data",:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       {:key=>"code",:label=>t(:code),:width=>"140px",:searchable=>true},
-                       {:key=>"name",:label=>t(:name),:width=>"200px",:searchable=>true},
-                       {:key=>"description",:label=>t(:description),:searchable=>true},
-                       ],{:paginator_box=>"config_relation_typesPaginatorBox",:search_box=>"config_relation_typesSearchBox"})%>
-        <div id="config_relation_typesPaginatorBox"></div>
-      </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_com_config_relation_type_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="config_relation_typesSearchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="config_relation_types">
+      <%= datatable("config_relation_types",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"config_relation_typesPaginatorBox",:search_box=>"config_relation_typesSearchBox"})%>
     </div>
+    <div id="config_relation_typesPaginatorBox"></div>
+  </div>
 </div>
+
 
 
