--- a/app/views/irm/people/index.html.erb
+++ b/app/views/irm/people/index.html.erb
@@ -15,8 +15,7 @@
   </tr></table>
   <div class="page-block-body">
     <div id="person">
-      <%= datatable("person",{:action=>"get_data",:format=>"json"},[],
-                         {:search_box=>"searchBox",:paginator_box=>"peoplePaginatorBox"})%>
+      <%= datatable("person",{:action=>"get_data",:format=>"json"},[],{:search_box=>"searchBox",:paginator_box=>"peoplePaginatorBox"})%>
     </div>
     <div id="peoplePaginatorBox"></div>
   </div>
