--- a/modules/com/app/views/com/config_attributes/_new_form.html.erb
+++ b/modules/com/app/views/com/config_attributes/_new_form.html.erb
@@ -1,109 +1,106 @@
-<%= form_for(@config_attribute,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@config_attribute,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
 <%=f.hidden_field :config_class_id  %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_com_config_attribute_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label for="config_attribute_code"><%=t(:label_com_config_attribute_code)%></label></td>
+            <td class="data-col"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"config_attribute_code"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="config_attribute_name"><%=t(:label_com_config_attribute_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"config_attribute_name"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="config_attribute_class"><%=t(:label_com_config_class)%></label></td>
+            <td class="data-col">
+              <%=f.blank_select(:config_class_id,available_classes,{}, {:disabled => true,:required => true}) %>
+            </td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <!-- 输入类型 -->
+          <tr>
+            <td class="label-col"><label for="config_attribute_input_type"><%=t(:label_com_config_attribute_input_type)%></label></td>
+            <td class="data-col">
+              <%=f.blank_select(:input_type,Irm::LookupValue.get_lookup_value("CONFIG_ATTRIBUTE_INPUT_TYPE").collect{|p| [p[:meaning], p.lookup_code]},{}, {:required => true}) %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label for="config_attribute_input_value"><%=t(:label_com_config_attribute_input_value)%></label></td>
+            <td class="data-col"><%=f.text_field :input_value ,:id=>"config_attribute_input_value"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label for="config_class_attribute_required_flag"><%=t(:config_class_attribute_required_flag)%></label></td>
+            <td class="data-col">
+              <label for="required_flag"><%= f.check_box(:required_flag) %></label>
+            </td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label for="config_class_attribute_display_flag"><%=t(:config_class_attribute_display_flag)%></label></td>
+            <td class="data-col">
+              <label for="display_flag"><%= f.check_box(:display_flag) %></label>
+            </td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label for="config_attribute_description"><%=t(:label_com_config_attribute_description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60 ,:id=>"config_attribute_description",:class=>"input-xlarge"%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @config_attribute %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_com_config_attribute_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="config_attribute_code"><%=t(:label_com_config_attribute_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"config_attribute_code"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="config_attribute_name"><%=t(:label_com_config_attribute_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"config_attribute_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="config_attribute_class"><%=t(:label_com_config_class)%></label></td>
-              <td class="dataCol">
-                <%=f.blank_select(:config_class_id,available_classes,{}, {:disabled => true,:required => true}) %>
-              </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <!-- 输入类型 -->
-            <tr>
-              <td class="labelCol"><label for="config_attribute_input_type"><%=t(:label_com_config_attribute_input_type)%></label></td>
-              <td class="dataCol">
-                <%=f.blank_select(:input_type,Irm::LookupValue.get_lookup_value("CONFIG_ATTRIBUTE_INPUT_TYPE").collect{|p| [p[:meaning], p.lookup_code]},{}, {:required => true}) %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label for="config_attribute_input_value"><%=t(:label_com_config_attribute_input_value)%></label></td>
-              <td class="dataCol"><%=f.text_field :input_value ,:id=>"config_attribute_input_value"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label for="config_class_attribute_required_flag"><%=t(:config_class_attribute_required_flag)%></label></td>
-              <td class="dataCol">
-                <label for="required_flag"><%= f.check_box(:required_flag) %></label>
-              </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label for="config_class_attribute_display_flag"><%=t(:config_class_attribute_display_flag)%></label></td>
-              <td class="dataCol">
-                <label for="display_flag"><%= f.check_box(:display_flag) %></label>
-              </td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label for="config_attribute_description"><%=t(:label_com_config_attribute_description)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60 ,:id=>"config_attribute_description"%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
