修正业务对像功能页面

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1209,15 +1209,16 @@ table.form-table td.label-4col{
 }
 
 
-
-
-
 table.form-table td.data-col{
     text-align: left;
     width: 38%;
     padding: 2px 2px 2px 10px;
     vertical-align: top;
 
+}
+
+table.form-table td.text-col{
+    padding-top: 7px;
 }
 
 table.form-table td.data-2col{
