--- a/app/views/irm/business_objects/_new_form.html.erb
+++ b/app/views/irm/business_objects/_new_form.html.erb
@@ -1,115 +1,123 @@
-<%= form_for(@business_object,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@business_object,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_business_object_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+       <tr>
+         <td class="label-col"><label for="business_object_name"><%=t(:label_irm_business_object_name)%></label></td>
+         <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"business_object_name"%></td>
+         <td class="label-col empty">&nbsp;</td>
+         <td class="data-col empty"><%=f.hidden_field :business_object_code%></td>
+       </tr>
+       <tr>
+         <td class="label-col"><label for="business_object_description"><%=t(:label_irm_business_object_description)%></label></td>
+         <td class="data-col" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"business_object_description"%></td>
+       </tr>
+       <tr>
+         <td class="label-col"><label for="business_object_standard_flag"><%=t(:label_irm_business_object_standard_flag)%></label></td>
+         <td class="data-col text-col"><%=f.check_box(:standard_flag,:id=>"business_object__standard_flag")%></td>
+         <td class="label-col"><label for="business_object_data_access_flag"><%=t(:label_irm_business_object_data_access_flag)%></label></td>
+         <td class="data-col text-col"><%=f.check_box(:data_access_flag,:id=>"business_object_data_access_flag")%></td>
+       </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @business_object %>
-    <%= f.hidden_field(:auto_generate_flag) %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="business_object_name"><%=t(:label_irm_business_object_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"business_object_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty"><%=f.hidden_field :business_object_code%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="business_object_description"><%=t(:label_irm_business_object_description)%></label></td>
-              <td class="dataCol" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"business_object_description"%></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="business_object_standard_flag"><%=t(:label_irm_business_object_standard_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box(:standard_flag,:id=>"business_object__standard_flag")%></td>
-              <td class="labelCol"><label for="business_object_data_access_flag"><%=t(:label_irm_business_object_data_access_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box(:data_access_flag,:id=>"business_object_data_access_flag")%></td>
-            </tr>
-           </tbody>
-      </table>
-    </div>
+  <% end %>
 
-    <div class="pbSubheader  tertiaryPalette">
-      <h3><%= t(:label_irm_business_object_api) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-
-            <tr>
-              <td class="labelCol"><label for="business_object_model_name"><%=t(:label_irm_business_object_bo_model_name)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:bo_model_name,available_not_exists_model,{},:required=>true) %></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty"><%=f.hidden_field :bo_table_name%></td>
-            </tr>
-           </tbody>
-      </table>
-    </div>
-
-
-    <div class="pbSubheader  tertiaryPalette">
-      <h3><%= t(:label_irm_business_object_function) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-
-            <tr>
-              <td class="labelCol"><label for="business_object_workflow_flag"><%=t(:label_irm_business_object_workflow_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box(:workflow_flag,:id=>"business_object_workflow_flag")%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="business_object_report_flag"><%=t(:label_irm_business_object_report_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box(:report_flag,:id=>"business_object_report_flag")%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty"><%=f.hidden_field :auto_generate_flag%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty"><%=f.hidden_field :multilingual_flag%></td>
-            </tr>
-           </tbody>
-      </table>
-    </div>
-
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
+  <% content_for :form_block_b   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+
+       <tr>
+         <td class="label-col"><label for="business_object_model_name"><%=t(:label_irm_business_object_bo_model_name)%></label></td>
+         <td class="data-col"><%= f.blank_select(:bo_model_name,available_not_exists_model,{},:required=>true) %></td>
+         <td class="label-col empty">&nbsp;</td>
+         <td class="data-col empty"><%=f.hidden_field :bo_table_name%></td>
+       </tr>
       </tbody>
     </table>
-  </div>
-</div>
+  <% end %>
+
+  <% content_for :form_block_c   do%>
+      <table class="form-table">
+        <tbody>
+
+         <tr>
+           <td class="label-col"><label for="business_object_workflow_flag"><%=t(:label_irm_business_object_workflow_flag)%></label></td>
+           <td class="data-col text-col"><%=f.check_box(:workflow_flag,:id=>"business_object_workflow_flag")%></td>
+           <td class="label-col empty">&nbsp;</td>
+           <td class="data-col empty">&nbsp;</td>
+         </tr>
+         <tr>
+           <td class="label-col"><label for="business_object_report_flag"><%=t(:label_irm_business_object_report_flag)%></label></td>
+           <td class="data-col text-col"><%=f.check_box(:report_flag,:id=>"business_object_report_flag")%></td>
+           <td class="label-col empty">&nbsp;</td>
+           <td class="data-col empty">&nbsp;</td>
+         </tr>
+         <tr>
+           <td class="label-col empty">&nbsp;</td>
+           <td class="data-col empty"><%=f.hidden_field :auto_generate_flag%></td>
+           <td class="label-col empty">&nbsp;</td>
+           <td class="data-col empty"><%=f.hidden_field :multilingual_flag%></td>
+         </tr>
+        </tbody>
+      </table>
+    <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_business_object_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @business_object%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
+        </div>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_irm_business_object_api) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_b   %>
+          </div>
+        </div>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_irm_business_object_function) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_c   %>
+          </div>
+        </div>
+      </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
+    </div>
+
 <% end %>
