--- a/app/views/irm/business_objects/_standard_object_attributes.html.erb
+++ b/app/views/irm/business_objects/_standard_object_attributes.html.erb
@@ -1,71 +1,20 @@
-<!--  irm datatable      -->
- <div class="irm-datatable">
-   <div>
-       <table>
-         <thead>
-           <tr>
-             <th style="width:40px;">
-               <div><%= t(:operation) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_irm_object_attribute_name) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_irm_object_attribute_attribute_name) %></div>
-             </th>
-             <th style="width:180px;">
-               <div><%= t(:label_irm_object_attribute_category) %></div>
-             </th>
-             <th style="width:80px;">
-               <div><%= t(:label_irm_object_attribute_data_type) %></div>
-             </th>
-
-             <th style="width:50px;">
-               <div><%= t(:label_irm_object_attribute_filter_flag) %></div>
-             </th>
-           </tr>
-         </thead>
-         <tbody>
-         <% datas.each do |data| %>
-         <tr id="<%=data[:id]%>">
-           <td>
-             <div>
-               <%= link_to(t(:edit),{:controller => "irm/object_attributes", :action => "edit", :bo_id => @business_object.id,:id=>data[:id]}) %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <% if Irm::Constant::SYS_YES.eql?(data[:label_flag]) %>
-                   <%= link_to("#{data[:name]}(#{t(:label_irm_object_attribute_label_flag)})",{:controller => "irm/object_attributes", :action => "show", :bo_id => @business_object.id,:id=>data[:id]}) %>
-               <% else %>
-                   <%= link_to(data[:name],{:controller => "irm/object_attributes", :action => "show", :bo_id => @business_object.id,:id=>data[:id]}) %>
-               <% end %>
-               </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:attribute_name] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= show_object_attribute_category(data) %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= data[:data_type] %>
-             </div>
-           </td>
-           <td>
-             <div>
-               <%= check_img(data[:filter_flag]) %>
-             </div>
-           </td>
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end irm datatable      -->
+<%=datatable_view({:count=>datas.length,:datas=>datas}) do |builder|%>
+  <% builder.column(:id,{:title=>t(:operation), :width => "70px"}) do |data|%>
+       <%= link_to(t(:edit),{:controller => "irm/object_attributes", :action => "edit", :bo_id => @business_object.id,:id=>data[:id]}) %>
+  <% end %>
+  <% builder.column(:name,{:title=>t(:label_irm_object_attribute_name),:searchable=>true}) do |data|%>
+        <% if Irm::Constant::SYS_YES.eql?(data[:label_flag]) %>
+            <%= link_to("#{data[:name]}(#{t(:label_irm_object_attribute_label_flag)})",{:controller => "irm/object_attributes", :action => "show", :bo_id => @business_object.id,:id=>data[:id]}) %>
+        <% else %>
+            <%= link_to(data[:name],{:controller => "irm/object_attributes", :action => "show", :bo_id => @business_object.id,:id=>data[:id]}) %>
+        <% end %>
+  <% end %>
+  <% builder.column(:attribute_name,{:title=>t(:label_irm_object_attribute_attribute_name),:searchable=>true})%>
+  <% builder.column(:category,{:title=>t(:label_irm_object_attribute_category),:searchable=>true}) do |data|%>
+        <%= show_object_attribute_category(data) %>
+  <% end %>
+  <% builder.column(:data_type,{:title=>t(:label_irm_object_attribute_data_type),:searchable=>true})%>
+  <% builder.column(:filter_flag,{:title=>t(:label_irm_object_attribute_filter_flag)}) do |data|%>
+        <%= check_img(data[:filter_flag]) %>
+  <% end %>
+<% end %>
