--- a/app/views/irm/object_attributes/_new_step_2.html.erb
+++ b/app/views/irm/object_attributes/_new_step_2.html.erb
@@ -1,152 +1,162 @@
-<%= form_for(@object_attribute,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-    <%= f.hidden_field(:step)%>
-<div  class="wizard-block">
-  <div class="pbWizardTitle tertiaryPalette">
-      <div class="ptRightTitle">
-          <%= t(:step_n_total_m, :n => "2", :m => "2") %>
-      </div>
-      <h2>
-          <%= t(:step_n, :n => "2") %><%= t(:label_irm_object_attribute_fill_attribute_info) %>
-      </h2>
-  </div>
-  <div class="pbBody">
-    <%= error_for @object_attribute %>
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-          <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-            <span class="pbSubExtra">
-              <span class="requiredLegend">
-                <span class="requiredExampleOuter">
-                  <span class="requiredExample">&nbsp;</span>
-                </span><span class="requiredMark">*</span>
-                <span class="requiredText"> = <%=t(:label_is_required)%></span>
-              </span>
-            </span>
-            <h3><%= t(:label_common_info) %></h3>
+<%= form_for(@object_attribute,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+
+  <% content_for :form_block_a   do%>
+        <table class="form-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label for="object_attribute_name"><%=t(:label_irm_object_attribute_name)%></label></td>
+                <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"object_attribute_name"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="object_attribute_attribute_name"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
+                <td class="data-col"><%=f.text_field :attribute_name, :required=>true ,:id=>"object_attribute_attribute_name"%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="object_attribute_description"><%=t(:label_irm_object_attribute_description)%></label></td>
+                <td class="data-col" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"object_attribute_description"%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="relation_bo_id"><%=t(:label_irm_object_attribute_field_type)%></label></td>
+                <td class="data-col"><%= f.select(:field_type,available_object_attribute_field_type,{},:required=>true,:id=>"field_type") %></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="object_attribute_label_flag"><%=t(:label_irm_object_attribute_label_flag)%></label></td>
+                <td class="data-col text-col"><%=f.check_box(:label_flag,:id=>"object_attribute_label_flag")%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="object_attribute_required_flag"><%=t(:label_irm_object_attribute_required_flag)%></label></td>
+                <td class="data-col text-col"><%=f.check_box(:required_flag,:id=>"object_attribute_required_flag")%></td>
+                <td class="label-col empty">&nbsp;</td>
+                <td class="data-col empty">&nbsp;</td>
+              </tr>
+          </tbody>
+
+        </table>
+  <% end %>
+
+  <% content_for :form_block_b   do%>
+    <table class="form-table">
+      <tbody>
+
+          <tr>
+            <td class="label-col"><label for="relation_bo_id"><%=t(:label_irm_object_attribute_relation_bo)%></label></td>
+            <td class="data-col"><%= f.blank_select(:relation_bo_id,available_business_object_with_id,{},:required=>true,:id=>"relation_bo_id") %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="relation_object_attribute_id"><%=t(:label_irm_object_attribute_relation_object_attribute)%></label></td>
+            <td class="data-col"><%= f.blank_select(:relation_object_attribute_id,[],{},
+                                                   {:id=>"relation_object_attribute_id",
+                                                    :required=>true,
+                                                    :href=>url_for(:controller=>"irm/object_attributes",:action=>"relation_columns",:format=>"json",:business_object_id=>"${relation_bo_id}"),
+                                                    :depend=>"relation_bo_id"}) %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="relation_type"><%=t(:label_irm_object_attribute_relation_type)%></label></td>
+            <td class="data-col"><%= f.blank_select(:relation_type,avaliable_relation_type,{},:required=>true,:id=>"relation_type") %></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+         </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_c   do%>
+        <table class="form-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label for="object_attribute_update_flag"><%=t(:label_irm_object_attribute_update_flag)%></label></td>
+                <td class="data-col text-col"><%=f.check_box(:update_flag,:id=>"object_attribute_update_flag")%></td>
+                <td class="label-col"><label for="object_attribute_person_flag"><%=t(:label_irm_object_attribute_person_flag)%></label></td>
+                <td class="data-col text-col"><%=f.check_box(:person_flag,:id=>"object_attribute_person_flag")%></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label for="object_attribute_filter_flag"><%=t(:label_irm_object_attribute_filter_flag)%></label></td>
+                <td class="data-col text-col"><%=f.check_box(:filter_flag,:id=>"object_attribute_filter_flag")%></td>
+                <td class="label-col"><label for="object_attribute_approve_flag"><%=t(:label_irm_object_attribute_approve_flag)%></label></td>
+                <td class="data-col text-col"><%=f.check_box(:approve_flag,:id=>"object_attribute_approve_flag")%></td>
+              </tr>
+             </tbody>
+        </table>
+    <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit btn"} %>
+        <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+        <%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"},{:class=>"btn"}  %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title">
+            <%= t(:step_n, :n => "2") %><%= t(:label_irm_object_attribute_fill_attribute_info) %>
+          </h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+          <h2 class="block-title"><%= t(:step_n_total_m, :n => "2", :m => "2") %></h2>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @object_attribute%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
           </div>
-          <div class="pbSubsection">
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_name"><%=t(:label_irm_object_attribute_name)%></label></td>
-                    <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"object_attribute_name"%></td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_attribute_name"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
-                    <td class="dataCol"><%=f.text_field :attribute_name, :required=>true ,:id=>"object_attribute_attribute_name"%></td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_description"><%=t(:label_irm_object_attribute_description)%></label></td>
-                    <td class="dataCol" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"object_attribute_description"%></td>
-                  </tr>
-                  <tr>
-                    <td class="labelCol"><label for="relation_bo_id"><%=t(:label_irm_object_attribute_field_type)%></label></td>
-                    <td class="dataCol"><%= f.select(:field_type,available_object_attribute_field_type,{},:required=>true,:id=>"field_type") %></td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_label_flag"><%=t(:label_irm_object_attribute_label_flag)%></label></td>
-                    <td class="dataCol"><%=f.check_box(:label_flag,:id=>"object_attribute_label_flag")%></td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_required_flag"><%=t(:label_irm_object_attribute_required_flag)%></label></td>
-                    <td class="dataCol"><%=f.check_box(:required_flag,:id=>"object_attribute_required_flag")%></td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-              </tbody>
-
-            </table>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
           </div>
-          <% if @object_attribute.category.present?&&["LOOKUP_RELATION","MASTER_DETAIL_RELATION"].include?(@object_attribute.category) %>
-              <div class="pbSubheader  tertiaryPalette">
-                <h3><%= t(:label_irm_business_object_relation) %></h3>
-              </div>
-              <div class="pbSubsection">
-                <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                  <tbody>
-
-                      <tr>
-                        <td class="labelCol"><label for="relation_bo_id"><%=t(:label_irm_object_attribute_relation_bo)%></label></td>
-                        <td class="dataCol"><%= f.blank_select(:relation_bo_id,available_business_object_with_id,{},:required=>true,:id=>"relation_bo_id") %></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="relation_object_attribute_id"><%=t(:label_irm_object_attribute_relation_object_attribute)%></label></td>
-                        <td class="dataCol"><%= f.blank_select(:relation_object_attribute_id,[],{},
-                                                               {:id=>"relation_object_attribute_id",
-                                                                :required=>true,
-                                                                :href=>url_for(:controller=>"irm/object_attributes",:action=>"relation_columns",:format=>"json",:business_object_id=>"${relation_bo_id}"),
-                                                                :depend=>"relation_bo_id"}) %></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="relation_type"><%=t(:label_irm_object_attribute_relation_type)%></label></td>
-                        <td class="dataCol"><%= f.blank_select(:relation_type,avaliable_relation_type,{},:required=>true,:id=>"relation_type") %></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                     </tbody>
-                </table>
-              </div>
-          <% end %>
-
-
-          <div class="pbSubheader  tertiaryPalette">
-            <h3><%= t(:label_irm_object_attribute_function) %></h3>
+        </div>
+        <% if @object_attribute.category.present?&&["LOOKUP_RELATION","MASTER_DETAIL_RELATION"].include?(@object_attribute.category) %>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_irm_business_object_relation) %></h3>
           </div>
-          <div class="pbSubsection">
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_update_flag"><%=t(:label_irm_object_attribute_update_flag)%></label></td>
-                    <td class="dataCol"><%=f.check_box(:update_flag,:id=>"object_attribute_update_flag")%></td>
-                    <td class="labelCol"><label for="object_attribute_person_flag"><%=t(:label_irm_object_attribute_person_flag)%></label></td>
-                    <td class="dataCol"><%=f.check_box(:person_flag,:id=>"object_attribute_person_flag")%></td>
-                  </tr>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_filter_flag"><%=t(:label_irm_object_attribute_filter_flag)%></label></td>
-                    <td class="dataCol"><%=f.check_box(:filter_flag,:id=>"object_attribute_filter_flag")%></td>
-                    <td class="labelCol"><label for="object_attribute_approve_flag"><%=t(:label_irm_object_attribute_approve_flag)%></label></td>
-                    <td class="dataCol"><%=f.check_box(:approve_flag,:id=>"object_attribute_approve_flag")%></td>
-                  </tr>
-                 </tbody>
-            </table>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_b   %>
+          </div>
+        </div>
+        <% end %>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_irm_object_attribute_function) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_c   %>
           </div>
         </div>
       </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= link_to t(:last), {:action => "new",:pre_step=>true},{:class=>"submit"} %></div>
-                    <div class="button"><%= link_to t(:save), {},{:type=>"submit"} %></div>
-                    <div class="button"><%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
+
 <% end %>
+
 <script type="text/javascript">
   $(function(){
       if($("#relation_bo_id")){
