--- a/app/views/irm/object_attributes/change_type.html.erb
+++ b/app/views/irm/object_attributes/change_type.html.erb
@@ -1,137 +1,147 @@
 <%= page_title("",t(:label_irm_object_attribute_change_type_link)) %>
-<%= form_for(@object_attribute,:url=>{:action=>"edit"},:builder => LabellingFormBuilder) do |f| %>
-<div  class="wizard-block">
-  <div class="pbWizardTitle tertiaryPalette">
-      <div class="ptRightTitle">
+<%= form_for(@object_attribute,:url=>{:action=>"edit"},:builder => CustomFormBuilder) do |f| %>
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
+      <tbody>
+        <% categories = object_attribute_categories %>
+        <% category = categories["LOOKUP_RELATION"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+
+        <% category = categories["MASTER_DETAIL_RELATION"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+
+        <% category = categories["CHECK_BOX"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["DATE_TIME"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+        <% category = categories["EMAIL"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["NUMBER"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["PHONE"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["PICK_LIST"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["PICK_LIST_MULTI"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["TEXT"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["TEXT_AREA"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["TEXT_AREA_RICH"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+
+        <% category = categories["URL"] %>
+        <tr>
+          <td class="data-col"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label style="display: inline-block; padding-left: 5px;" for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
+          <td class="data-col" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
+        </tr>
+        <tr>
+          <td class="labelCol"></td>
+          <td class="data-col"></td>
+          <td class="labelCol"></td>
+          <td class="data-col"></td>
+        </tr>
+
+      </tbody>
+    </table>
+  <% end %>
+
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"},:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title">
+            <%=t(:label_irm_object_attribute_change_type)%>
+          </h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @object_attribute%>
+
+            <%= content_for :form_block_a   %>
 
       </div>
-      <h2>
-          <%= t(:label_irm_object_attribute_change_type) %>
-      </h2>
-  </div>
-  <div class="pbBody">
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div class="pbSubsection">
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
 
-                <tbody>
-                  <% categories = object_attribute_categories %>
-                  <% #if !@object_attribute.category.present?||["LOOKUP_RELATION","MASTER_DETAIL_RELATION"].include?(@object_attribute.category)%>
-                    <% category = categories["LOOKUP_RELATION"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-
-                    <% category = categories["MASTER_DETAIL_RELATION"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-                  <% #end %>
-
-                  <% if !@object_attribute.category.present?||!["LOOKUP_RELATION","MASTER_DETAIL_RELATION"].include?(@object_attribute.category)%>
-                    <% category = categories["CHECK_BOX"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["DATE_TIME"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-                    <% category = categories["EMAIL"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["NUMBER"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["PHONE"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["PICK_LIST"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["PICK_LIST_MULTI"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["TEXT"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["TEXT_AREA"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["TEXT_AREA_RICH"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-
-                    <% category = categories["URL"] %>
-                    <tr>
-                      <td class="dataCol"><%= f.radio_button(:category,category[:lookup_code],:class=>"attributeCategory",:id=>"category_#{category[:lookup_code].downcase}")%><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:meaning].downcase%></label></td>
-                      <td class="dataCol" colspan="3"><label for="category_<%=category[:lookup_code].downcase%>"><%=category[:description].downcase%></label></td>
-                    </tr>
-                  <% end %>
-                  <tr>
-                    <td class="labelCol"></td>
-                    <td class="dataCol"></td>
-                    <td class="labelCol"></td>
-                    <td class="dataCol"></td>
-                  </tr>
-
-                </tbody>
-              </table>
-            </div>
-        </div>
-      </div>
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
-<%end%>
+
+<% end %>
+
+
+
+
 <script type="text/javascript">
   $(function(){
       $.checkRadioButton("input.attributeCategory")
   });
 </script>
+
+
