--- a/app/views/irm/object_attributes/new_model_attribute.html.erb
+++ b/app/views/irm/object_attributes/new_model_attribute.html.erb
@@ -1,84 +1,96 @@
 <%= common_title(:action_meaning=>t(:label_irm_object_attribute_new_model_attribute)) %>
-<%= form_for(@object_attribute,:url=>{:action=>"create_model_attribute"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@object_attribute,:url=>{:action=>"create_model_attribute"},:builder => CustomFormBuilder) do |f| %>
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_object_attribute_new_model_attribute)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:save), {},{:type=>"submit"} %></div>
-            <div class="button"><%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"} %></div>
+          <td class="label-col"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_name)%></label></td>
+          <td class="data-col">
+            <%=f.text_field :name, {:required=>true}%>
+            <%= f.hidden_field(:business_object_id) %>
+            <%= f.hidden_field(:attribute_type) %>
+            <%= f.hidden_field(:field_type) %>
           </td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
+          <td class="data-col"><%=f.text_field :attribute_name, {:required=>true}%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
         </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @object_attribute %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-          <tr>
-            <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_name)%></label></td>
-            <td class="dataCol">
-              <%=f.text_field :name, {:required=>true}%>
-              <%= f.hidden_field(:business_object_id) %>
-              <%= f.hidden_field(:attribute_type) %>
-              <%= f.hidden_field(:field_type) %>
-            </td>
-            <td class="labelCol empty">&nbsp;</td>
-            <td class="dataCol empty">&nbsp;</td>
-          </tr>
-          <tr>
-            <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_object_attribute_attribute_name)%></label></td>
-            <td class="dataCol"><%=f.text_field :attribute_name, {:required=>true}%></td>
-            <td class="labelCol empty">&nbsp;</td>
-            <td class="dataCol empty">&nbsp;</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="pbSubheader  tertiaryPalette">
-      <h3><%= t(:label_irm_object_attribute_function) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="object_attribute_person_flag"><%=t(:label_irm_object_attribute_person_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box(:person_flag,:id=>"object_attribute_person_flag")%></td>
-              <td class="labelCol"><label for="object_attribute_approve_flag"><%=t(:label_irm_object_attribute_approve_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box(:approve_flag,:id=>"object_attribute_approve_flag")%></td>
-            </tr>
-           </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
+  <% end %>
+
+  <% content_for :form_block_b   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= link_to t(:save), {},{:type=>"submit"} %></div>
-            <div class="button"><%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"} %></div>
-          </td>
-        </tr>
+       <tr>
+         <td class="label-col"><label for="object_attribute_person_flag"><%=t(:label_irm_object_attribute_person_flag)%></label></td>
+         <td class="data-col text-col"><%=f.check_box(:person_flag,:id=>"object_attribute_person_flag")%></td>
+         <td class="label-col"><label for="object_attribute_approve_flag"><%=t(:label_irm_object_attribute_approve_flag)%></label></td>
+         <td class="data-col text-col"><%=f.check_box(:approve_flag,:id=>"object_attribute_approve_flag")%></td>
+       </tr>
       </tbody>
     </table>
-  </div>
-</div>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:id=>params[:bo_id],:action => "show",:controller=>"irm/business_objects"},:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title">
+            <%=t(:label_irm_object_attribute_new_model_attribute)%>
+          </h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @object_attribute%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
+        </div>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <h3 class="sub-page-block-title"><%= t(:label_irm_object_attribute_function) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_b   %>
+          </div>
+        </div>
+      </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
+    </div>
+
 <% end %>
+
+
 
