--- a/app/views/irm/search_layouts/_edit_form.html.erb
+++ b/app/views/irm/search_layouts/_edit_form.html.erb
@@ -1,62 +1,66 @@
-<%= form_for(@search_layout,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@search_layout,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_search_layout_edit)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to(t(:save),{},{:type=>"submit"})%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label for="search_layout_code"><%=t(:label_irm_search_layout_code)%></label></td>
+            <td class="data-col"><%=f.blank_select :code,available_business_object_search_layout_types,{}, :required=>true ,:id=>"search_layout_code"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;<%= f.hidden_field(:business_object_id,:value=>params[:bo_id])%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="business_object_description"><%=t(:label_irm_search_layout_columns)%></label></td>
+            <td class="data-col" colspan="3">
+              <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>available_object_attribute(params[:bo_id]),:str_value_field=>:columns_str,:str_value=>@search_layout.get_columns_str,:size=>10,:order=>true} %>
+            </td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @search_layout %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_search_layout_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @search_layout%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
+        </div>
+
+      </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="search_layout_code"><%=t(:label_irm_search_layout_code)%></label></td>
-              <td class="dataCol"><%=f.blank_select :code,available_business_object_search_layout_types,{}, :required=>true ,:id=>"search_layout_code"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="business_object_description"><%=t(:label_irm_search_layout_columns)%></label></td>
-              <td class="dataCol" colspan="3">
-                <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>available_object_attribute(params[:bo_id]),:str_value_field=>:columns_str,:str_value=>@search_layout.get_columns_str,:size=>10,:order=>true} %>
-              </td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= link_to(t(:save),{},{:type=>"submit"})%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
+
+
