--- a/modules/com/app/views/com/config_relation_members/_new_form.html.erb
+++ b/modules/com/app/views/com/config_relation_members/_new_form.html.erb
@@ -1,65 +1,61 @@
-<%= form_for(@config_relation_member,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@config_relation_member,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+  <%=f.hidden_field :config_relation_type_id,:value=>@config_relation_type_id %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_com_config_relation_member)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_relation_type_name)%></label></td>
+            <td class="data-col"><label><%=@config_relation_type_name%></label></td>
+
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_relation_member_class_name)%></label></td>
+            <td class="data-col"><%= f.select :config_class_id, nullable_options_for_select(available_config_class, @config_relation_member.config_class_id), {}, {:require=>true} %></td>
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+        </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_com_config_relation_member)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-  <div class="pbBody">
-    <%= error_for @config_relation_member %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-        <tr>
-                      <td class="labelCol"><label><%=(t :label_com_config_relation_type_name)%></label></td>
-                      <td class="dataCol"><%=@config_relation_type_name%>  <%=f.hidden_field :config_relation_type_id,:value=>@config_relation_type_id %></td>
-
-                      <td class="labelCol"></td>
-                      <td class="dataCol"></td>
-                    </tr>
-        <tr>
-                      <td class="labelCol"><label><%=(t :label_com_config_relation_member_class_name)%></label></td>
-                      <td class="dataCol"><%= f.select :config_class_id, nullable_options_for_select(available_config_class, @config_relation_member.config_class_id),
-                                                                     {}, {:require=>true} %></td>
-
-                      <td class="labelCol"></td>
-                      <td class="dataCol"></td>
-                    </tr>
-                  </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
