--- a/modules/com/app/views/com/config_relation_members/get_data.html.erb
+++ b/modules/com/app/views/com/config_relation_members/get_data.html.erb
@@ -1,38 +1,8 @@
-<!--  irm datatable      -->
- <div class="irm-datatable">
-   <div>
-       <table count="<%=@count%>">
-         <thead>
-           <tr>
-             <th style="width:80px">
-               <div><%= t(:operation) %></div>
-             </th>
-             <th>
-               <div><%= t(:label_com_config_relation_type_name) %></div>
-             </th>
-             <th>
-                <div><%= t(:label_com_config_relation_member_class_name) %></div>
-             </th>
-           </tr>
-         </thead>
-         <tbody>
-         <% @datas.each do |data| %>
-         <tr id="<%=data.id %>">
-           <td>
-             <div>
-                <%= link_to(t(:edit),{:controller=>"com/config_relation_members",:action=>"edit",:id=>data.id}) %> | <%= link_to(t(:delete),{:controller=>"com/config_relation_members",:action=>"destroy",:id=>data.id},{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
-             </div>
-           </td>
-           <td>
-             <div><%= data[:type_name] %></div>
-           </td>
-           <td>
-             <div><%= data[:config_class_name] %></div>
-           </td>
-         </tr>
-         <% end -%>
-         </tbody>
-       </table>
-   </div>
- </div>
-<!--  end irm datatable      -->
+<%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
+  <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
+    <%= link_to(t(:show),{:action=>"show",:id=>data[:id]}) %>
+  <% end %>
+  <% builder.column(:type_name,{:title=>t(:label_com_config_relation_type_name)})%>
+  <% builder.column(:config_class_name,{:title=>t(:label_com_config_relation_member_class_name),:searchable=>true})%>
+<% end %>
