--- a/modules/com/app/views/com/config_relation_types/show.html.erb
+++ b/modules/com/app/views/com/config_relation_types/show.html.erb
@@ -1,76 +1,60 @@
 <%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_relation_type) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @config_relation_type}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_com_config_relation_type) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @config_relation_type},:class=>"btn btn-primary"%>
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
+        <tbody>
+          <tr>
+            <td class="label-col"><label for="code"><%=t(:code)%></label></td>
+            <td class="data-col"><%=@config_relation_type.code%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="name"><%=t(:name)%></label></td>
+            <td class="data-col"><%=@config_relation_type[:name]%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="description"><%=t(:description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=@config_relation_type[:description]%></td>
+          </tr>
+        </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>    <tr>
-                          <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
-                          <td class="dataCol"><%=@config_relation_type.code%></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
-                        <tr>
-                          <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                          <td class="dataCol"><%=@config_relation_type[:name]%></td>
-                          <td class="labelCol empty">&nbsp;</td>
-                          <td class="dataCol empty">&nbsp;</td>
-                        </tr>
+</div>
 
-                        <tr>
-                          <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                          <td class="dataCol" colspan="3" width="82%"><%=@config_relation_type[:description]%></td>
-                        </tr>
-                  </tbody>
-      </table>
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_com_config_relation_member_list) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:new), {:controller=>"com/config_relation_members",:action => "new",:config_relation_type_id=>@config_relation_type.id,:config_relation_type_name=>@config_relation_type[:name]},:class=>"btn"%>
+      </td>
+      <td class="page-block-help">
+        <div id="config_relation_membersSearchBox"></div>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="config_relation_members">
+      <%= datatable("config_relation_members",{:controller=>"com/config_relation_members",:action=>"get_data",:config_relation_type_id=>@config_relation_type.id,:format=>"json"},[],{:paginator_box=>"config_relation_membersPaginatorBox",:search_box=>"config_relation_membersSearchBox"})%>
     </div>
+    <div id="config_relation_membersPaginatorBox"></div>
   </div>
 </div>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_relation_member_list) %></h2></td>
-              <td  class="pbButton">
-                <div class="button"><%= link_to t(:new), {:controller=>"com/config_relation_members",:action => "new",:config_relation_type_id=>@config_relation_type.id,:config_relation_type_name=>@config_relation_type[:name]}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="config_relation_membersSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="config_relation_members" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller=>"com/config_relation_members",:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:delete),{:controller=>"com/config_relation_members",:action=>"destroy",:id=>"{id}"},{:back=>true,:method => :delete,:confirm => t(:label_are_you_sure) }) %>
-          </div>
-        </div>
-        <%= datatable("config_relation_members",{:controller=>"com/config_relation_members",:action=>"get_data",:config_relation_type_id=>@config_relation_type.id,:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       {:key=>"type_name",:label=>t(:label_com_config_relation_type_name),:width=>"140px"},
-                       {:key=>"config_class_name",:label=>t(:label_com_config_relation_member_class_name),:searchable=>true,},
 
-                                              ],{:paginator_box=>"config_relation_membersPaginatorBox",:search_box=>"config_relation_membersSearchBox",:force_html=>true})%>
-        <div id="config_relation_membersPaginatorBox"></div>
-      </div>
-    </div>
-</div>
 
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@config_relation_type} %>
