修正Tab功能页面

--- a/app/views/irm/tabs/multilingual_edit.html.erb
+++ b/app/views/irm/tabs/multilingual_edit.html.erb
@@ -1,3 +1,2 @@
-<div class="container">
-   <%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@tab} %>
-</div>
+<%= common_title%>
+<%=render :partial=>"multilingual/edit",:locals=>{:main_data=>@tab} %>
