--- a/app/views/irm/tabs/show.html.erb
+++ b/app/views/irm/tabs/show.html.erb
@@ -1,61 +1,54 @@
-<%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= common_title(:show_data=>@tab[:name]) %>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%=t(:label_irm_menu)%></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @tab},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_tab) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @tab}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_tab_code)%></label></td>
+            <td class="data-col"><div><%= @tab.code %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_tab_name)%></label></td>
+            <td class="data-col"><div><%= @tab[:name] %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_tab_business_object)%></label></td>
+            <td class="data-col"><div><%= @tab[:business_object_name] %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_tab_function_group)%></label></td>
+            <td class="data-col"><div><%= @tab[:function_group_name] %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_tab_style_image)%></label></td>
+            <td class="data-col"><div><%= @tab.style_image %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_tab_description)%></label></td>
+            <td class="data-col" colspan="3" style="width:82%"><div><%= @tab.description %></div></td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_tab_code)%></label></td>
-              <td class="dataCol"><div><%= @tab.code %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_tab_name)%></label></td>
-              <td class="dataCol"><div><%= @tab[:name] %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_tab_business_object)%></label></td>
-              <td class="dataCol"><div><%= @tab[:business_object_name] %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_tab_function_group)%></label></td>
-              <td class="dataCol"><div><%= @tab[:function_group_name] %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_tab_style_image)%></label></td>
-              <td class="dataCol"><div><%= @tab.style_image %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_tab_description)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%"><div><%= @tab.description %></div></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
 </div>
-
 <%=render :partial=>"multilingual/show",:locals=>{:main_data=>@tab} %>
