--- a/app/views/slm/service_catalogs/_new_form.html.erb
+++ b/app/views/slm/service_catalogs/_new_form.html.erb
@@ -1,118 +1,105 @@
-<%= form_for(@service_catalog,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@service_catalog,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_slm_service_catalog_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+           <tr>
+            <td class="label-col"><label for="service_catalog_parent_catalog_id"><%=t(:label_slm_service_catalog_parent_catalog)%></label></td>
+            <td class="data-col"><%=f.blank_select :parent_catalog_id ,available_parentable_service_catalog,:id=>"service_catalog_parent_catalog_id"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="service_catalog_service_catalog_code"><%=t(:label_slm_service_catalog_catalog_code)%></label></td>
+            <td class="data-col"><%=f.text_field :catalog_code, :required=>true ,:irm_uppercase=>true,:id=>"service_catalog_service_catalog_code"%></td>
+            <td class="label-col"><label for="service_catalog_active_start_date"><%=t(:label_slm_service_catalog_active_start_date)%></label></td>
+            <td class="data-col"><%= f.date_field :active_start_date,:value=>show_date, :id=>"service_catalog_active_start_date"%></td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label for="service_catalog_name"><%=t(:label_slm_service_catalog_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"service_catalog_name"%></td>
+            <td class="label-col"><label for="service_catalog_active_end_date"><%=t(:label_slm_service_catalog_active_end_date)%></label></td>
+            <td class="data-col"><%= f.date_field :active_end_date, :id=>"service_catalog_active_end_date"%></td>
+          </tr>
+
+          <tr>
+            <td class="label-col">
+              <label for="service_catalog_service_category_code"><%=t(:label_slm_service_catalog_service_category_code)%></label>
+            </td>
+            <td class="data-col">
+              <%=f.blank_select :service_category_id,available_service_categories,{}, :id=>"service_catalog_service_category_code"%>
+            </td>
+            <td class="label-col"><label for="service_catalog_slm_code"><%=t(:label_slm_service_catalog_slm_code)%></label></td>
+            <td class="data-col"><%=f.blank_select :slm_id, available_service_agreement,{},:id=>"service_catalog_slm_code"%></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="service_catalog_description"><%=t(:label_slm_service_catalog_description)%></label></td>
+            <td class="data-col" width="82%" colspan="3"><%= f.text_area :description, :rows => 4,:id=>"service_catalog_description", :class=>"input-xlarge"%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @service_catalog %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-             <tr>
-              <td class="labelCol"><label for="service_catalog_parent_catalog_id"><%=t(:label_slm_service_catalog_parent_catalog)%></label></td>
-              <td class="dataCol"><%=f.blank_select :parent_catalog_id ,available_parentable_service_catalog,:id=>"service_catalog_parent_catalog_id"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="service_catalog_service_catalog_code"><%=t(:label_slm_service_catalog_catalog_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :catalog_code, :required=>true ,:irm_uppercase=>true,:id=>"service_catalog_service_catalog_code"%></td>
-              <td class="labelCol"><label for="service_catalog_active_start_date"><%=t(:label_slm_service_catalog_active_start_date)%></label></td>
-              <td class="dataCol"><%= f.text_field :active_start_date,:value=>show_date, :id=>"service_catalog_active_start_date"%></td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label for="service_catalog_name"><%=t(:label_slm_service_catalog_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"service_catalog_name"%></td>
-              <td class="labelCol"><label for="service_catalog_active_end_date"><%=t(:label_slm_service_catalog_active_end_date)%></label></td>
-              <td class="dataCol"><%= f.text_field :active_end_date, :id=>"service_catalog_active_end_date"%></td>
-            </tr>
-
-            <tr>
-              <td class="labelCol">
-                <label for="service_catalog_service_category_code"><%=t(:label_slm_service_catalog_service_category_code)%></label>
-              </td>
-              <td class="dataCol">
-                <%=f.blank_select :service_category_id,available_service_categories,{},
-                                             :id=>"service_catalog_service_category_code"%>
-              </td>
-              <td class="labelCol"><label for="service_catalog_slm_code"><%=t(:label_slm_service_catalog_slm_code)%></label></td>
-              <td class="dataCol"><%=f.blank_select :slm_id,
-                                      available_service_agreement,{},
-                                             :id=>"service_catalog_slm_code"%></td>
-            </tr>
-
-
-
-
-            <tr>
-              <td class="labelCol"><label for="service_catalog_description"><%=t(:label_slm_service_catalog_description)%></label></td>
-              <td class="dataCol" width="82%" colspan="3"><%= f.text_area :description, :rows => 4,:id=>"service_catalog_description"%></td>
-            </tr>
-
-        </tbody>
-      </table>
-    </div>
-    <div id="head_2_ep" class="pbSubheader first tertiaryPalette">
-      <h3><%= t(:label_slm_service_catalog_usable_external_system) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-               <td class="labelCol">
-
-               </td>
-               <td class="dataCol" colspan="3">
-                 <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>external_system_duel_values,:str_value_field=>:external_system_str,:str_value=>@service_catalog.get_external_system_str} %>
-               </td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
+  <% end %>
+  <% content_for :form_block_system   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+             <td class="label-col"></td>
+             <td class="data-col" colspan="3">
+               <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:sources=>external_system_duel_values,:str_value_field=>:external_system_str,:str_value=>@service_catalog.get_external_system_str} %>
+             </td>
+          </tr>
       </tbody>
     </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_slm_service_catalog_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+        <!-- 支持组信息 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_slm_service_catalog_usable_external_system) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_system  %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
   </div>
-</div>
 <% end %>
-
-<%= calendar_view("service_catalog_active_start_date","service_catalog_active_start_date","cal") %>
-<%= calendar_view("service_catalog_active_end_date","service_catalog_active_end_date","cal") %>
