--- a/app/views/skm/entry_templates/show.html.erb
+++ b/app/views/skm/entry_templates/show.html.erb
@@ -1,90 +1,63 @@
 <%= page_title %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_skm_entry_template) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @entry_template },:class=>"btn btn-primary"%>
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_entry_template) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @entry_template}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_skm_entry_template_code)%></label></td>
+            <td class="data-col"><%= @entry_template.entry_template_code%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :name)%></label></td>
+            <td class="data-col"><%= @entry_template.name%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:description)%></label></td>
+            <td class="data-col"><div><%= @entry_template.description%></div></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :active)%></label></td>
+            <td class="data-col"><%= check_img(@entry_template.status_code)%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_skm_entry_template_code)%></label></td>
-              <td class="dataCol"><%= @entry_template.entry_template_code%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :name)%></label></td>
-              <td class="dataCol"><%= @entry_template.name%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=t(:description)%></label></td>
-              <td class="dataCol"><div><%= @entry_template.description%></div></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :active)%></label></td>
-              <td class="dataCol"><%= check_img(@entry_template.status_code)%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
 </div>
-
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_skm_entry_template_element_list) %></h2></td>
-              <td class="pbButton">
-                <div class="button"><%= link_to t(:add),
-                {:controller => "skm/entry_templates", :action => "select_elements", :template_id => @entry_template}%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="entry_elements_list" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= icon_link("btn_up", t(:move_up), {:controller => "skm/entry_templates", :action => "up_element", :element_id => "{id}", :template_id => @entry_template})%>&nbsp;
-            <%= icon_link("btn_down", t(:move_down), {:controller => "skm/entry_templates", :action => "down_element", :element_id => "{id}", :template_id => @entry_template})%>&nbsp;
-            <%= icon_link("btn_remove",t(:remove),{:controller => "skm/entry_templates", :action => "remove_element", :element_id => "{id}", :template_id => @entry_template}) %>&nbsp;
-            <%= icon_link_edit({:controller => "skm/entry_templates", :action => "edit_detail", :id => "{detail_id}"}) %>
-          </div>
-          <div id="detail_required_flag" style="display:none">
-            <%= check_img("{detail_required_flag}") %>
-          </div>               
-        </div>
-        <%= datatable("entry_elements_list",{:controller => "skm/entry_templates", :action=>"get_owned_elements_data", :template_id => @entry_template,:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template", :width => "100px"},
-                       {:key=>"detail_id",:formatter=>"Y.irm.template", :hidden => true},
-                       {:key=>"detail_required_flag",:label=>t(:label_skm_entry_template_element_required),:formatter=>"Y.irm.template", :width => "40px"},
-                       {:key=>"entry_template_element_code",:label=>t(:label_skm_entry_template_element_code), :width => "200px"},
-                       {:key=>"name",:label=>t(:name), :width => "130px"},
-                       {:key=>"description",:label=>t(:description)},
-                       {:key=>"detail_rows",:label=>t(:label_skm_entry_template_element_rows), :width => "80px"}
-                       ]) %>
-      </div>
+<!-- 配置属性列表 -->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_skm_entry_template_element_list) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:add),{:controller => "skm/entry_templates", :action => "select_elements", :template_id => @entry_template},:class=>"btn"%>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="entry_elements_list">
+      <%= datatable("entry_elements_list",{:controller => "skm/entry_templates", :action=>"get_owned_elements_data", :template_id => @entry_template,:format=>"json"},[],{:paginator_box=>"entry_elementsPaginatorBox"}) %>
     </div>
+    <div id="entry_elementsPaginatorBox"></div>
+  </div>
 </div>
