--- a/app/views/slm/service_agreements/_edit_form.html.erb
+++ b/app/views/slm/service_agreements/_edit_form.html.erb
@@ -3,44 +3,43 @@
     <table class="form-table">
       <tbody>
           <tr>
-            <td class="label-col"></td>
-            <td class="data-col"></td>
+            <td class="label-col"><label for="service_agreement_service_agreement_code"><%=t(:label_slm_service_agreement_agreement_code)%></label></td>
+            <td class="data-col"><%=f.text_field :agreement_code, :required=>true,:id=>"service_agreement_agreement_code"%></td>
             <td class="label-col"><label for="service_agreement_active_start_date"><%=t(:label_slm_service_agreement_active_start_date)%></label></td>
             <td class="data-col"><%= f.date_field :active_start_date, :id=>"service_agreement_active_start_date"%></td>
           </tr>
 
           <tr>
-            <td class="label-col"><label for="service_agreement_service_agreement_code"><%=t(:label_slm_service_agreement_agreement_code)%></label></td>
-            <td class="data-col"><%=f.text_field :agreement_code, :required=>true,:id=>"service_agreement_agreement_code"%></td>
+            <td class="label-col"><label for="service_agreement_name"><%=t(:label_slm_service_agreement_name)%></label></td>
+            <td class="data-col"><%= f.text_field :name, :required=>true ,:value=>@service_agreement[:name],:id=>"service_agreement_system_name"%></td>
             <td class="label-col"><label for="service_agreement_active_end_date"><%=t(:label_slm_service_agreement_active_end_date)%></label></td>
             <td class="data-col"><%= f.date_field :active_end_date, :id=>"service_agreement_active_end_date"%></td>
           </tr>
 
           <tr>
-            <td class="label-col"><label for="service_agreement_name"><%=t(:label_slm_service_agreement_name)%></label></td>
-            <td class="data-col"><%= f.text_field :name, :required=>true ,:value=>@service_agreement[:name],
-                                                 :id=>"service_agreement_system_name"%></td>
             <td class="label-col"><label for="service_agreement_response_time"><%=t(:label_slm_service_agreement_response_time)%></label></td>
             <td class="data-col">
-              <%= f.text_field :response_day, :size => 2,:value=>get_day_count(@service_agreement.response_time),:id=>"service_agreement_response_day", :class=>"span1"%>
-                                <%=t(:label_slm_service_agreement_response_day)%>
+              <%= f.text_field :response_day, :size => 2,:value=>get_day_count(@service_agreement.response_time),:id=>"service_agreement_response_day",:style=>"width:30px;"%>
+                                <label><%=t(:label_slm_service_agreement_response_day)%></label>
                                 <%= f.select :response_hour, options_for_select(available_lookup_type('SLM_SERVICE_HOUR'),get_hour_count(@service_agreement.response_time)),:size => 2,:id=>"service_agreement_response_hour"%>
-                                <%=t(:label_slm_service_agreement_response_hour)%>
+                                <label><%=t(:label_slm_service_agreement_response_hour)%></label>
                                 <%= f.select :response_minute, options_for_select(available_lookup_type('SLM_SERVICE_MINUTE'),get_minute_count(@service_agreement.response_time)),:size => 2,:id=>"service_agreement_response_minute"%>
-                                <%=t(:label_slm_service_agreement_response_minute)%>
+                                <label><%=t(:label_slm_service_agreement_response_minute)%></label>
             </td>
+            <td class="label-col"><label for="service_agreement_resolve_time"><%=t(:label_slm_service_agreement_resolve_time)%></label></td>
+            <td class="data-col"><%= f.text_field :solve_day, :size => 2,:value=>get_day_count(@service_agreement.resolve_time),:id=>"service_agreement_response_day",:style=>"width:30px;"%>
+                                <label><%=t(:label_slm_service_agreement_solve_day)%></label>
+                                <%= f.select :solve_hour, options_for_select(available_lookup_type('SLM_SERVICE_HOUR'),get_hour_count(@service_agreement.response_time)),:size => 2,:id=>"service_agreement_response_hour"%>
+                                <label><%=t(:label_slm_service_agreement_solve_hour)%></label>
+                                <%= f.select :solve_minute, options_for_select(available_lookup_type('SLM_SERVICE_MINUTE'),get_minute_count(@service_agreement.response_time)),:size => 2,:id=>"service_agreement_response_minute"%>
+                                <label><%=t(:label_slm_service_agreement_solve_minute)%></label></td>
           </tr>
 
           <tr>
             <td class="label-col"><label for="service_agreement_description"><%=t(:label_slm_service_agreement_description)%></label></td>
             <td class="data-col"><%= f.text_area :description, :rows => 4,:value=>@service_agreement[:description],:id=>"service_agreement_system_description",:class=>"input-xlarge"%></td>
-            <td class="label-col"><label for="service_agreement_resolve_time"><%=t(:label_slm_service_agreement_resolve_time)%></label></td>
-            <td class="data-col"><%= f.text_field :solve_day, :size => 2,:value=>get_day_count(@service_agreement.resolve_time),:id=>"service_agreement_response_day", :class=>"span1"%>
-                                <%=t(:label_slm_service_agreement_solve_day)%>
-                                <%= f.select :solve_hour, options_for_select(available_lookup_type('SLM_SERVICE_HOUR'),get_hour_count(@service_agreement.response_time)),:size => 2,:id=>"service_agreement_response_hour"%>
-                                <%=t(:label_slm_service_agreement_solve_hour)%>
-                                <%= f.select :solve_minute, options_for_select(available_lookup_type('SLM_SERVICE_MINUTE'),get_minute_count(@service_agreement.response_time)),:size => 2,:id=>"service_agreement_response_minute"%>
-                                <%=t(:label_slm_service_agreement_solve_minute)%></td>
+            <td class="label-col empty"></td>
+            <td class="data-col empty"></td>
           </tr>
       </tbody>
     </table>
