--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1172,7 +1172,7 @@ table.form-table label{
     font-size: 91%;
     font-weight: bold;
     margin-top: 5px;
-
+    display: inline-block;
 }
 
 table.form-table td.label-col{
@@ -1205,7 +1205,6 @@ table.form-table td.label-4col{
     width: 100%;
     vertical-align: top;
     padding: 2px 10px 2px 2px;
-
 }
 
 
@@ -1217,7 +1216,6 @@ table.form-table td.data-col{
     width: 38%;
     padding: 2px 2px 2px 10px;
     vertical-align: top;
-
 }
 
 table.form-table td.data-2col{
@@ -1225,7 +1223,6 @@ table.form-table td.data-2col{
     width: 50%;
     padding: 2px 2px 2px 10px;
     vertical-align: top;
-
 }
 
 
@@ -1234,7 +1231,6 @@ table.form-table td.data-3col{
     width: 82%;
     padding: 2px 2px 2px 10px;
     vertical-align: top;
-
 }
 
 
@@ -1243,10 +1239,10 @@ table.form-table td.data-4col{
     width: 100%;
     padding: 2px 2px 2px 10px;
     vertical-align: top;
-
 }
 
 .form-field-wrapped{
+    display: inline-block;
     input, textarea, select, .uneditable-input {
       margin: 0;
     }
